Fixed Header Size on Mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ footer li {
     }
 
     header h1 {
-        font-size: 3rem;
+        font-size: 1rem;
     }
 
     footer ul {
